# SemiReliable-RDMA

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DEBUG_LOG.md  DEBUG_PROTOCOL.md  deep-research-report.md  pyproject.toml
.claude/: settings.local.json
.claude/logs/: session-20260412-32dcb6f7.md  session-20260414-ac2fb11e.md  session-20260416-0aeef03e.md  session-20260416-99412ee3.md  session-20260416-a5162273.md  session-20260418-0b9f364c.md  session-20260420-ceb0bd26.md  session-20260423-ae776718.md
cloudlab/profiles/: middlebox_line.py
docs/: PLAN.md  README.md
docs/phase1/: p0-walkthrough.md
docs/phase1-results/: analysis-report.md  code-walkthrough.md  figure-catalog.md  p0-experiment-walkthrough.md  p0-sweep-500rounds.csv  stats-appendix.md
docs/phase2/: design-core-transport.md  log-implementation.md  phase2-final.md  rq1-log-implementation.md  rq2-results-ghost-masking.md
docs/phase2-design/: core-transport.md  implementation-log.md  rq2-ghost-masking-results.md
docs/phase2/history/: rq2-results-ghost-masking.md  rq4-results-ratio-timeout.md
docs/phase3/: cluster-amd247-amd245-amd264.md  phase3-final.md  rq5-results-ddp-baseline.md  rq6-b5-rc-baselines-partial.md  rq6-prep-a2-real-nic-convergence.md  rq6-prep-real-nic-equivalence.md  rq6-semirdma-effective-loss-analysis.md  stage-b-hardware-notes.md  stage-b-microbench-cx6.md  stage-b-phase2-resweep.md
docs/phase3/history/: design-ddp-integration.md  rq6-loss-injection-strategy.md  rq6-prep-a2-real-nic-convergence.md  rq6-semirdma-effective-loss-analysis.md  stage-b-hardware-notes.md  stage-b-phase2-resweep.md
docs/phase3/history/results-cx5-amd203-amd196/: README.md  hybrid-timeout-investigation.md  rq6-a1-bit-for-bit.md  rq6-a2-convergence.md  rq6-b5-rc-baselines.md  stage-b-phase2-resweep.md
docs/phase3/history/results-cx6lx25g-c240g5_archive/: README.md  rq1_chunk_sweep_cx6lx25g_loopback_500r.csv  rq4_ratio_timeout_cx6lx25g_loopback_500r.csv
docs/phase3/results-cx5-amd203-amd196/: hybrid-tail-probe.md  rq6-a2-convergence.md  stage-b-microbench.md
docs/phase3/results-cx6lx25g-c240g5/: rq1_chunk_sweep_cx6lx25g_2node_250r.csv  rq2_rms_error_cx6lx25g_2node_100r.csv  rq2_rms_error_cx6lx25g_loopback_200r.csv  rq4_ratio_timeout_cx6lx25g_2node_250r.csv
docs/phase3/results-cx6lx25g-c240g5/microbench_c240g5/: environment.json  m5_ghost_mask.csv  summary.json
docs/phase3/results-cx6lx25g-c240g5/rq6-prep-stage-a-real-nic/: semirdma_seed123_loss_per_step.csv  (+1 more)
docs/phase4/: calibration-100g.md  hybrid-dead-end.md  layer-aware-design.md  prb-results.md
docs/phase4/raw_data/: README.md  aggregate_final.csv
docs/phase5/: PHASE5_PLAN.md  clear-design.md  code-reorg.md  experiments.md
docs/phase5/results/: e0_1_slot_wrap.md  e0_2_prebegin_race.md  e0_3_ucrc_reorder.md  e0_5_witness_loss.md  e1_baseline_compare.md  e1_bit_equality_check.md  e1_clear_perf_decode.md  e1_per_cell.csv  e1_results.md  e1_smoke_findings.md  e1_summary.csv
experiments/configs/: phase5_e1.yaml  stage_a_baseline.yaml  stage_b_cloudlab.yaml
experiments/phase5/: e0_1_slot_wrap.py  e0_2_prebegin_race.py  e0_3_ucrc_reorder.py  e0_5_witness_loss.py
experiments/stage_a/: train_cifar10.py
experiments/stage_b/: microbench_cx6_local.py
python/semirdma/: __init__.py  _bootstrap.py  config.py  hooks.py  transport.py
python/semirdma/baselines/: __init__.py  _common.py  rc_hook.py  rc_lossy_hook.py  rc_rdma_hook.py  rc_rdma_transport.py
python/semirdma/clear/: __init__.py  hook.py  manifest.py  policy.py  protocol.py  runtime.py  transport.py
python/semirdma/layer_aware/: __init__.py  calibrator.py  dispatcher.py  registry.py  state.py
scripts/: run_netem_test.sh  setup_softroce.sh
scripts/aliyun/: run_stage_a.sh  setup_env.sh
scripts/analysis/: analyze_rq5.py  ghost_vs_loss.py  loss_trajectory.py  matrix_aggregate.py  prb_aggregate.py
scripts/cloudlab/: _matrix_lib.sh  arp_spoof_setup.sh  bootstrap_fresh_node.sh  day0_check.sh  detect_rdma_dev.sh  hammer_rdma.sh  hammer_udp.sh  hammer_validate.sh  link_setup.sh  middlebox_setup.sh  middlebox_validate.sh  netem_inject.sh  rq_hybrid_tail_probe.sh  run_a1_real_nic.sh  run_a2_real_nic.sh  run_b5_real_nic.sh  run_p1_matrix.sh  run_perftest.sh  run_uc_loss_calibration.sh  setup_env.sh  uc_blaster.py  uc_loss_probe.sh
scripts/cloudlab/xdp_dropbox/: Makefile  xdp_dropbox.bpf.c
scripts/phase5/: e1_aggregate.py  e1_clear_perf_analyze.py  e1_run_remaining.sh  run_e1_grid.py
src/bindings/: CMakeLists.txt  py_semirdma.cpp
src/transport/: chunk_manager.cpp  chunk_manager.h  ghost_mask.cpp  ghost_mask.h  ratio_controller.cpp  ratio_controller.h  uc_qp_engine.cpp  uc_qp_engine.h
src/transport/clear/: control_plane.cpp  control_plane.h  control_plane_codec.cpp  control_plane_codec.h  finalizer.cpp  finalizer.h  imm_codec.h  lease_table.cpp  lease_table.h  messages.h  rq_monitor.cpp  rq_monitor.h  witness_codec.cpp  witness_codec.h
src/utils/: logging.h  timing.h
tests/phase1/: Makefile  rdma_common.h  run_tests.sh  test_ghost_gradient.c  test_netem_loss.c  test_uc_write_imm.c  test_wqe_rate.c
tests/phase2/: CMakeLists.txt  test_bucket_id_isolation.cpp  test_chunk_roundtrip.cpp  test_chunk_sweep.cpp  test_ghost_mask.cpp  test_helpers.h  test_pending_wrap.cpp  test_ratio_sweep.cpp  test_ratio_timeout.cpp  test_rms_error.cpp
tests/phase3/: conftest.py  test_binding_sanity.py  test_ddp_hook.py  test_loopback_transport.py
tests/phase4/: conftest.py  test_layer_aware_calibrator.py  test_layer_aware_dispatch.py  test_layer_aware_e2e.py  test_layer_aware_registry.py
tests/phase5/: CMakeLists.txt  test_control_plane_codec.cpp  test_control_plane_loopback.cpp  test_finalizer.cpp  test_imm_codec.cpp  test_lease_table.cpp  test_ratio_clear_loopback.cpp  test_rq_monitor.cpp  test_witness_codec.cpp
tests/phase5/python/: conftest.py  test_clear_bindings.py  test_clear_e2e_protocol.py  test_clear_hook_e2e.py  test_clear_hook_multiproc.py  test_clear_manifest.py  test_clear_policy.py  test_clear_runtime.py  test_control_plane_py_loopback.py
(+885 files in other folders)
